# natively-cluely-ai-assistant

./: .gitignore  AUDIT.md  INTELLIGENCE_EVAL_SUMMARY.md  INTELLIGENCE_FEATURE_INDEX.md  INTELLIGENCE_FIX_REPORT.md  INTELLIGENCE_LATENCY_REPORT.md  INTELLIGENCE_PIPELINE_MAP.md  PHASE_STATUS.md  PRIVACY.md  PROFILE_INTELLIGENCE_RESEARCH_AND_REDESIGN.md  PROFILE_INTELLIGENCE_TEST_PLAN.md  README.md  SECURITY.md  TRANSCRIPT_AWARE_INTENT_ROUTING.md  apple-signing-report.md  changes.md  package-lock.json  package.json  profile.md  refund.md  termsandcondition.md  test-worker.js  vite.config.mts
.github/: RELEASE_TEMPLATE.md
docs/: 00-current-server-audit.md  00b-pre-migration-review-findings.md  01-target-stt-relay-architecture.md  02-stt-core-extraction.md  03-relay-session-token.md  04-relay-selection.md  05-stt-relay-service.md  LOCAL_STT_NATIVELY_SETUP.md  RELEASE.md  app-api-contract-audit.md  embedding-migration-analysis.md  embedding-migration-report.md  fixreport.md  google-embedding-verification.md  reembedding-plan.md  vector-dimension-audit.md
electron/: CropperWindowHelper.ts  IntelligenceEngine.ts  IntelligenceManager.ts  LLMHelper.ts  MeetingPersistence.ts  ModelSelectorWindowHelper.ts  ScreenshotHelper.ts  SessionTracker.ts  SettingsWindowHelper.ts  ThemeManager.ts  WindowHelper.ts  ipcHandlers.ts  main.ts  preload.ts  tsconfig.json
intelligence-eval-real-ui/: run-real-ui-e2e.ts
intelligence-eval-results/: iteration-002.json
native-module/: Cargo.toml  index.d.ts  index.js  package-lock.json
native-module/src/: keyboard_tap.rs  lib.rs  license.rs  microphone.rs  resampler.rs
native-module/src/speaker/: core_audio.rs  macos.rs  mod.rs  sck.rs  windows.rs
natively-browser/: PRIVACY_POLICY.md  package.json
scripts/: ad-hoc-sign.js  afterAllArtifactBuild.cjs  build-electron.js  download-models.js  ensure-sharp-mac-deps.js  hindsight-dev-server.py  hindsight-llm-config.mjs  hindsight-smoke-test.mjs  (+7 more)
(+471 files in other folders)
