
[package]
name = "natively-audio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.3", features = ["napi4"] }
napi-derive = "3.5.2"
cpal = "0.15.2"
ringbuf = "0.4"
anyhow = "1.0"
once_cell = "1.18.0"
rubato = "0.16"
rand = "0.8"
sha2 = "0.10"
machine-uid = "0.5"
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1.0"
webrtc-vad = "0.4"
# Zero-copy reinterpret of &[i16] as &[u8] for napi Buffer hand-off.
# Replaces a per-chunk per-sample to_le_bytes loop in the DSP hot path.
bytemuck = "1"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.11.10", features = ["ca", "cm", "av", "cat", "dispatch", "ns", "sc", "cf", "blocks", "objc"] }
# Used by stealth_window to access NSWindow APIs Electron doesn't expose
# (becomesKeyOnlyIfNeeded, hidesOnDeactivate, collectionBehavior). objc2 is
# the actively-maintained Rust↔Objective-C bridge; objc2-app-kit gives strongly
# typed AppKit bindings so we can avoid raw msg_send! ergonomics.
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWindow", "NSResponder"] }
objc2-foundation = "0.2"
# CGEventTap: session-wide keyboard interception for true Cluely-grade
# stealth input. The tap captures keystrokes BEFORE they reach the
# foreground app, so the user can type into Natively while Zoom/browser
# stays as the OS-level frontmost+key application throughout. core-graphics
# wraps CGEventTapCreate/CGEventGetFlags/CGEventKeyboardGetUnicodeString;
# core-foundation gives us the CFRunLoop the tap must attach to.
core-graphics = "0.24"
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.13.0"
windows = { version = "0.52.0", features = ["Win32_Media_Audio", "Win32_System_Com", "Win32_System_Threading"] }
tracing = "0.1.44"
